--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 asgiref==3.8.1
 beautifulsoup4==4.12.3
-crispy-bootstrap5==0.6
-Django==4.0.5
+blinker==1.9.0
+click==8.1.7
+colorama==0.4.6
+Django==4.2.16
 django-bootstrap-v5==1.0.11
-django-crispy-forms==1.14.0
+Flask==3.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
 soupsieve==2.6
-sqlparse==0.5.2
+sqlparse==0.5.1
 tzdata==2024.2
+Werkzeug==3.1.3
